# CrossGuid

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CrossGuidHelperFunctions.cmake  Finduuid.cmake  HelperFunctions.cmake
examples/: CMakeLists.txt  printGUID.cpp
include/CrossGuid/: Guid.hpp
include/crossguid/: guid.hpp
source/: Guid.cpp  guid.cpp
tests/: CMakeLists.txt  testBasicCrossGuid.cpp
